--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "tinyapp-",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "express_server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "./node_modules/.bin/nodemon -L express_server.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ryanstew95/tinyapp-.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ryan Stewart",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ryanstew95/tinyapp-/issues"
@@ -20,5 +21,8 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
