--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/ryanstew95/tinyapp-#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
-    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
